--- a/arujisama_flask/requirements.txt
+++ b/arujisama_flask/requirements.txt
@@ -1,13 +1,17 @@
+alembic==1.4.1
 atomicwrites==1.3.0
 attrs==19.1.0
 Click==7.0
 colorama==0.4.1
 Flask==1.1.1
 Flask-JWT==0.3.2
+Flask-Migrate==2.5.2
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
 importlib-metadata==0.19
 itsdangerous==1.1.0
 Jinja2==2.10.1
+Mako==1.1.2
 MarkupSafe==1.1.1
 more-itertools==7.2.0
 packaging==19.0
@@ -17,6 +21,8 @@ PyJWT==1.4.2
 PyMySQL==0.9.3
 pyparsing==2.4.1.1
 pytest==5.0.1
+python-dateutil==2.8.1
+python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.6
 wcwidth==0.1.7
